# reservation

./: .env  Cargo.toml  README.md
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  lib.rs  utils.rs
abi/src/error/: mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: reservation.rs  reservation_status.rs
migrations/: 20240313110802_init.down.sql  20240313110802_init.up.sql  20240314083144_add_reservation.down.sql  20240314083144_add_reservation.up.sql  20240314083611_reservation_trigger.down.sql  20240314083611_reservation_trigger.up.sql  20240314083949_reservation_func.down.sql  20240314083949_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md
service/: Cargo.toml
service/fixtures/: config.yml
service/src/: lib.rs  service.rs
