[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
derive_builder = "0.20.0"
prost = "0.12.3"
prost-types = "0.12.3"
regex = "1.10.3"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.58"
tonic = { version = "0.11.0", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.11.0"
