[package]
name = "reservation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.81"
futures = { version = "0.3.30", default-features = false }
lazy_static = "1.4.0"
reservation = { version = "0.1.0", path = "../reservation" }
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }

[dev-dependencies]
sqlx = { version = "0.6.2", features = [
	"runtime-tokio-rustls",
	"postgres",
	"chrono",
	"uuid",
] }
